--- a/index.html
+++ b/index.html
@@ -1,10 +1,43 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
-    <title>halo bang,</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Halo, selamat datang!</title>
+
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: #f3f4f6;
+            margin: 0;
+            padding: 40px;
+            color: #333;
+        }
+        .container {
+            background: #ffffff;
+            max-width: 700px;
+            margin: auto;
+            padding: 30px;
+            border-radius: 12px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+        }
+        h1 {
+            color: #1d4ed8;
+            margin-bottom: 10px;
+        }
+        p {
+            line-height: 1.6;
+            font-size: 1.1rem;
+        }
+    </style>
 </head>
 <body>
-    <h1>selamat datang di website saya</h1>
-    <p>Ini adalah halaman utama yang saya buat.</p>
+    <div class="container">
+        <h1>Halo! Terima kasih sudah berkunjung</h1>
+        <p>
+            Ini merupakan halaman utama dari website sederhana yang saya buat. 
+            Silakan jelajahi dan gunakan halaman ini sesuai kebutuhan Anda.
+        </p>
+    </div>
 </body>
 </html>
