--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>halo bang,</title>
+    <title>halo,</title>
 </head>
 <body>
-    <h1>selamat datang di website saya</h1>
+    <h1>selamat datang di website Albert</h1>
     <p>Ini adalah halaman utama yang saya buat.</p>
 </body>
 </html>
