--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>hello</title>
+    <title>welcome</title>
 </head>
 <body>
     <h1>selamat datang di website Albert</h1>
