--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>welcome</title>
 </head>
 <body>
-    <h1>selamat datang di website Albert</h1>
-    <p>Ini adalah halaman utama yang saya buat.</p>
+    <h1>welcome to my website Albert</h1>
+    <p>this is the main page.</p>
 </body>
 </html>
