--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>welcome</title>
+    <title>hello</title>
 </head>
 <body>
-    <h1>welcome to my website Albert</h1>
+    <h1>welcome to my website p</h1>
     <p>this is the main page.</p>
 </body>
 </html>
